<resources>
    <string name="app_name">Vista Academy</string>
    <string name="facebook_app_id">473594360378979</string>
    <string name="fb_login_protocol_scheme">fb473594360378979</string>
    <string name="facebook_client_token">fe92ab84f3d293e28c964e0ccdcdd879</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string-array name="Languages">
        <item>Grade</item>
        <item>Grade A</item>
        <item>Grade B</item>
        <item>Grade C</item>
        <item>Grade D</item>
        <item>Grade E</item>
        <item>Grade F</item>
    </string-array>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_version_available">There is a newer version of EPO application available, click &quot;UPDATE&quot; to update now ?</string>
    <string name="maps_api_key" translatable="false"> </string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="added_to_offline_cart">Added to Offline Cart</string>
    <string name="offline_mode_add_to_cart_message"> You are currently not connected to the Internet. There is no assurance that you will definitely get the product as this depends on product availabilty at the time of sync.</string>
    <string name="offline_cart">Offline Cart</string>
    <string name="sync_cart_with_server_body_message">There are some pending add to cart instances on this device which are not synced with server. Would you like to sync them?</string>
    <string name="sync_now">Sync Now</string>
    <string name="syncing_in_bg">Syncing in background</string>
    <string name="added_to_offline_wish_list_to_cart">Add to Offline Wish List to Cart</string>
    <string name="offline_wish_list_to_cart">Offline Wish List to Cart</string>
    <string name="sync_wish_list_to_cart_with_server_body_message">There are some pending Wish List to cart instances on this device which are not synced with server. Would you like to sync them?</string>
    <string name="add_to_offline_wish_list_all_to_cart">Add to Offline Wish List All to Cart</string>
    <string name="offline_wish_list_all_to_cart">Offline Wish List All to Cart</string>
    <string name="sync_wish_list_all_to_cart_with_server_body_message">There are some pending Wish List All to cart instances on this device which are not synced with server. Would you like to sync them?</string>
    <string name="error">Error</string>
    <string name="oops">Oops...</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="you_are_offline">You are offline</string>
    <string name="error_internet">Internet not available, Cross check your internet connectivity and try again later.</string>
    <string name="error_server">Looks like our server is down for maintenance, Please try again later.</string>
    <string name="error_request">Unable to communicate with the server at the moment. Please try again later.</string>
    <string name="error_timeout">The request has timed out. The network seems to be very slow, Please try again!!!</string>
    <string name="close">Close</string>
    <string name="dismiss">Dismiss</string>
    <string name="try_again">Try Again</string>
    <string name="is_required">is required</string>
    <string name="enter_a_valid">Enter a valid</string>
    <string name="colon">:</string>
    <string name="download_started">Download Started</string>
    <string name="yes_remove_it">Yes, Remove It</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="storage_acccess_permission">Access needed to download the content</string>
    <string name="update_alert_title">Update Alert</string>
    <string name="continue_text">Continue</string>
    <string name="notification_channel_id">Alert</string>
    <string name="notification_channel_name">Alert</string>
    <string name="no_internet_connection">No Internet Connection.. Please Try Again..</string>
    <string name="time_out_error">TimeOut Error Please Try Again..</string>
    <string name="session_expired">Session Expired. Login to continue</string>
    <string name="server_error">Server Error.. Please Try Again..</string>
    <string name="network_error">Network Error.. Please Try Again..</string>
    <string name="parsing_error">Parse Error.. Please Try Again..</string>
    <string name="add_address">Add Address</string>
    <string name="enter_nick_name_as">Enter Nick Name This Address As</string>
    <string name="enter_address_name">Enter Address Name</string>
    <string name="address">Address</string>
    <string name="enter_full_address">Enter Full Address</string>
    <string name="pin_code">Pincode</string>
    <string name="enter_pin_code">Enter Pincode</string>
    <string name="landmark">Landmark</string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="add">Add</string>
    <string name="select_location_below">Select Location Below</string>
    <string name="choose_store">Choose Store</string>
    <string name="search_store">Search Store(PinCode or Location Name)</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="coupons">Coupons</string>
    <string name="dummy_amount">$ 0.00</string>
    <string name="my_referrals">My Referrals</string>
    <string name="available_credit">Available Credit</string>
    <string name="dummy">Dummy</string>
    <string name="search_products">Search Products</string>
    <string name="store_is_open">Store is Open</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="view_all">View All</string>
    <string name="products">Products</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="best_seller">Best Seller</string>
    <string name="saved_address">Saved Address</string>
    <string name="back">Back</string>
    <string name="proceed_with_your">Proceed With Your</string>
    <string name="number">Number</string>
    <string name="mobile">Mobile</string>
    <string name="send_otp">Send Otp</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share_your_referral_code">Share your referral code</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signin_with_otp">Signin with OTP</string>
    <string name="looks_like_you_have_not_referred">Looks like you\'ve not referred</string>
    <string name="start_referring">Start Referring</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="enter_the_amount">Enter The Amount</string>
    <string name="no_records_found">No Records Found</string>
    <string name="total_amount">Total Amount</string>
    <string name="otp">Otp</string>
    <string name="digit_code_sent_to">6 digit code sent to </string>
    <string name="submit">Submit</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="resend_in">Resend In</string>
    <string name="lets_give_your">Lets\'s give your</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="referral_code">Referral Code</string>
    <string name="full_name_s">Full Name *</string>
    <string name="email_s">Email *</string>
    <string name="mobile_s">Mobile *</string>
    <string name="password_s">Password *</string>
    <string name="confirm_password_s">Confirm Password *</string>
    <string name="location_s">Location *</string>
    <string name="thank_you_for_your_order">Thank you for your order!</string>
    <string name="your_order_number_is">Your order number is #</string>
    <string name="order_success1">Please visit My Order page to manage your orders.</string>
    <string name="order_success2">If you want to reorder the same items please vist my orders page and click Reorder button to proceed..</string>
    <string name="track_order">Track Order</string>
    <string name="shop_more">Shop More</string>
    <string name="url">Url</string>
    <string name="method">Method</string>
    <string name="response_code">Response Code</string>
    <string name="request_body">Request Body</string>
    <string name="request_header">Request Header</string>
    <string name="response">Response</string>
    <string name="items">Items</string>
    <string name="saved">Saved</string>
    <string name="offer">Offer</string>
    <string name="discount">Discount</string>
    <string name="coupon_content">Adidas\'s gift value packed 50.00% OFF for every pack. Gift card cost 200 POINTS</string>
    <string name="expires">Expires</string>
    <string name="expires_dummy">Aug 31, 2021</string>
    <string name="copy">Copy</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="category">Category</string>
    <string name="avalilable_only">Available Only</string>
    <string name="thats_all_folks">That\'s All Folks</string>
    <string name="order_placed">Order Placed</string>
    <string name="your_order_has_been_placed">Your Order has been placed</string>
    <string name="amount">Amount</string>
    <string name="placed">Placed</string>
    <string name="reorder">Reorder</string>
    <string name="up_to">Up to</string>
    <string name="since">since</string>
    <string name="credit">Credit</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert">Alert</string>
    <string name="api_data">Api Data</string>
    <string name="enquiry">Enquiry</string>
    <string name="name">Name</string>
    <string name="type_here">Type Here</string>
    <string name="available_pack_size_for">Available Pack Size for</string>
    <string name="review_basket">Review Basket</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="your_basket_is_empty">Your Basket is Empty</string>
    <string name="retry">Retry</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="you_saved">You Saved</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="est_total">Est. Total</string>
</resources>