<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    android:id="@+id/card"
    app:cardUseCompatPadding="true">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/url"
                    android:textColor="@color/black"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:layout_toStartOf="@id/share"
                    android:text="@string/url"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="5dp"
                    android:id="@+id/share"
                    android:src="@drawable/ic_baseline_share_24"
                    app:tint="@color/black" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/method"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/method"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/response_code"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/response_code"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_body"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/request_body"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/request_header"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/request_header"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/response"
                android:textColor="@color/black"
                android:padding="5dp"
                android:singleLine="true"
                android:text="@string/response"/>
        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>